sintatico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 $@2: %empty

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis

    8 $@3: %empty

    9 declaracao_variaveis: tipo $@3 lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 $@4: %empty

   13 lista_variaveis: lista_variaveis T_IDENTIF $@4 encontra_vetor

   14 $@5: %empty

   15 lista_variaveis: T_IDENTIF $@5 encontra_vetor

   16 encontra_vetor: %empty

   17 $@6: %empty

   18 encontra_vetor: T_ABRECOLCHETES T_NUMERO $@6 T_FECHACOLCHETES

   19 lista_comandos: %empty
   20               | comando lista_comandos

   21 comando: entrada_saida
   22        | repeticao
   23        | selecao
   24        | atribuicao

   25 entrada_saida: leitura
   26              | escrita

   27 leitura: T_LEIA T_IDENTIF

   28 escrita: T_ESCREVA expressao

   29 $@7: %empty

   30 $@8: %empty

   31 repeticao: T_ENQTO $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

   32 $@9: %empty

   33 $@10: %empty

   34 selecao: T_SE expressao $@9 T_ENTAO lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

   35 $@11: %empty

   36 atribuicao: T_IDENTIF $@11 T_ATRIB expressao

   37 expressao: expressao T_VEZES expressao
   38          | expressao T_DIV expressao
   39          | expressao T_MAIS expressao
   40          | expressao T_MENOS expressao
   41          | expressao T_MAIOR expressao
   42          | expressao T_MENOR expressao
   43          | expressao T_IGUAL expressao
   44          | expressao T_E expressao
   45          | expressao T_OU expressao
   46          | termo

   47 termo: T_IDENTIF
   48      | T_NUMERO
   49      | T_V
   50      | T_F
   51      | T_NAO termo
   52      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_PROGRAMA (258) 3
T_INICIO (259) 2
T_FIM (260) 2
T_IDENTIF (261) 3 13 15 27 36 47
T_LEIA (262) 27
T_ESCREVA (263) 28
T_ENQTO (264) 31
T_FACA (265) 31
T_FIMENQTO (266) 31
T_SE (267) 34
T_ENTAO (268) 34
T_SENAO (269) 34
T_FIMSE (270) 34
T_ATRIB (271) 36
T_VEZES (272) 37
T_DIV (273) 38
T_MAIS (274) 39
T_MENOS (275) 40
T_MAIOR (276) 41
T_MENOR (277) 42
T_IGUAL (278) 43
T_E (279) 44
T_OU (280) 45
T_V (281) 49
T_F (282) 50
T_NUMERO (283) 18 48
T_NAO (284) 51
T_ABRE (285) 52
T_ABRECOLCHETES (286) 18
T_FECHACOLCHETES (287) 18
T_FECHA (288) 52
T_LOGICO (289) 10
T_INTEIRO (290) 11


Não-terminais com as regras onde eles aparecem

$accept (36)
    à esquerda: 0
programa (37)
    à esquerda: 2, à direita: 0
$@1 (38)
    à esquerda: 1, à direita: 2
cabecalho (39)
    à esquerda: 3, à direita: 2
variaveis (40)
    à esquerda: 4 5, à direita: 2
declaracao_variaveis (41)
    à esquerda: 7 9, à direita: 5 7
$@2 (42)
    à esquerda: 6, à direita: 7
$@3 (43)
    à esquerda: 8, à direita: 9
tipo (44)
    à esquerda: 10 11, à direita: 7 9
lista_variaveis (45)
    à esquerda: 13 15, à direita: 7 9 13
$@4 (46)
    à esquerda: 12, à direita: 13
$@5 (47)
    à esquerda: 14, à direita: 15
encontra_vetor (48)
    à esquerda: 16 18, à direita: 13 15
$@6 (49)
    à esquerda: 17, à direita: 18
lista_comandos (50)
    à esquerda: 19 20, à direita: 2 20 31 34
comando (51)
    à esquerda: 21 22 23 24, à direita: 20
entrada_saida (52)
    à esquerda: 25 26, à direita: 21
leitura (53)
    à esquerda: 27, à direita: 25
escrita (54)
    à esquerda: 28, à direita: 26
repeticao (55)
    à esquerda: 31, à direita: 22
$@7 (56)
    à esquerda: 29, à direita: 31
$@8 (57)
    à esquerda: 30, à direita: 31
selecao (58)
    à esquerda: 34, à direita: 23
$@9 (59)
    à esquerda: 32, à direita: 34
$@10 (60)
    à esquerda: 33, à direita: 34
atribuicao (61)
    à esquerda: 36, à direita: 24
$@11 (62)
    à esquerda: 35, à direita: 36
expressao (63)
    à esquerda: 37 38 39 40 41 42 43 44 45 46, à direita: 28 31 34
    36 37 38 39 40 41 42 43 44 45 52
termo (64)
    à esquerda: 47 48 49 50 51 52, à direita: 46 51


State 0

    0 $accept: . programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


State 2

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 5


State 3

    2 programa: cabecalho . $@1 variaveis T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $padrão  reduzir usando a regra 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $padrão  aceitar


State 6

    2 programa: cabecalho $@1 . variaveis T_INICIO lista_comandos T_FIM

    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 4 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


State 7

   10 tipo: T_LOGICO .

    $padrão  reduzir usando a regra 10 (tipo)


State 8

   11 tipo: T_INTEIRO .

    $padrão  reduzir usando a regra 11 (tipo)


State 9

    2 programa: cabecalho $@1 variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  deslocar, e ir ao estado 12


State 10

    5 variaveis: declaracao_variaveis .
    7 declaracao_variaveis: declaracao_variaveis . tipo $@2 lista_variaveis

    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 5 (variaveis)

    tipo  ir ao estado 13


State 11

    9 declaracao_variaveis: tipo . $@3 lista_variaveis

    $padrão  reduzir usando a regra 8 ($@3)

    $@3  ir ao estado 14


State 12

    2 programa: cabecalho $@1 variaveis T_INICIO . lista_comandos T_FIM

    T_IDENTIF  deslocar, e ir ao estado 15
    T_LEIA     deslocar, e ir ao estado 16
    T_ESCREVA  deslocar, e ir ao estado 17
    T_ENQTO    deslocar, e ir ao estado 18
    T_SE       deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 19 (lista_comandos)

    lista_comandos  ir ao estado 20
    comando         ir ao estado 21
    entrada_saida   ir ao estado 22
    leitura         ir ao estado 23
    escrita         ir ao estado 24
    repeticao       ir ao estado 25
    selecao         ir ao estado 26
    atribuicao      ir ao estado 27


State 13

    7 declaracao_variaveis: declaracao_variaveis tipo . $@2 lista_variaveis

    $padrão  reduzir usando a regra 6 ($@2)

    $@2  ir ao estado 28


State 14

    9 declaracao_variaveis: tipo $@3 . lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 29

    lista_variaveis  ir ao estado 30


State 15

   36 atribuicao: T_IDENTIF . $@11 T_ATRIB expressao

    $padrão  reduzir usando a regra 35 ($@11)

    $@11  ir ao estado 31


State 16

   27 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 32


State 17

   28 escrita: T_ESCREVA . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 39
    termo      ir ao estado 40


State 18

   31 repeticao: T_ENQTO . $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 29 ($@7)

    $@7  ir ao estado 41


State 19

   34 selecao: T_SE . expressao $@9 T_ENTAO lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 42
    termo      ir ao estado 40


State 20

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  deslocar, e ir ao estado 43


State 21

   20 lista_comandos: comando . lista_comandos

    T_IDENTIF  deslocar, e ir ao estado 15
    T_LEIA     deslocar, e ir ao estado 16
    T_ESCREVA  deslocar, e ir ao estado 17
    T_ENQTO    deslocar, e ir ao estado 18
    T_SE       deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 19 (lista_comandos)

    lista_comandos  ir ao estado 44
    comando         ir ao estado 21
    entrada_saida   ir ao estado 22
    leitura         ir ao estado 23
    escrita         ir ao estado 24
    repeticao       ir ao estado 25
    selecao         ir ao estado 26
    atribuicao      ir ao estado 27


State 22

   21 comando: entrada_saida .

    $padrão  reduzir usando a regra 21 (comando)


State 23

   25 entrada_saida: leitura .

    $padrão  reduzir usando a regra 25 (entrada_saida)


State 24

   26 entrada_saida: escrita .

    $padrão  reduzir usando a regra 26 (entrada_saida)


State 25

   22 comando: repeticao .

    $padrão  reduzir usando a regra 22 (comando)


State 26

   23 comando: selecao .

    $padrão  reduzir usando a regra 23 (comando)


State 27

   24 comando: atribuicao .

    $padrão  reduzir usando a regra 24 (comando)


State 28

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 . lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 29

    lista_variaveis  ir ao estado 45


State 29

   15 lista_variaveis: T_IDENTIF . $@5 encontra_vetor

    $padrão  reduzir usando a regra 14 ($@5)

    $@5  ir ao estado 46


State 30

    9 declaracao_variaveis: tipo $@3 lista_variaveis .
   13 lista_variaveis: lista_variaveis . T_IDENTIF $@4 encontra_vetor

    T_IDENTIF  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 9 (declaracao_variaveis)


State 31

   36 atribuicao: T_IDENTIF $@11 . T_ATRIB expressao

    T_ATRIB  deslocar, e ir ao estado 48


State 32

   27 leitura: T_LEIA T_IDENTIF .

    $padrão  reduzir usando a regra 27 (leitura)


State 33

   47 termo: T_IDENTIF .

    $padrão  reduzir usando a regra 47 (termo)


State 34

   49 termo: T_V .

    $padrão  reduzir usando a regra 49 (termo)


State 35

   50 termo: T_F .

    $padrão  reduzir usando a regra 50 (termo)


State 36

   48 termo: T_NUMERO .

    $padrão  reduzir usando a regra 48 (termo)


State 37

   51 termo: T_NAO . termo

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    termo  ir ao estado 49


State 38

   52 termo: T_ABRE . expressao T_FECHA

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 50
    termo      ir ao estado 40


State 39

   28 escrita: T_ESCREVA expressao .
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIS   deslocar, e ir ao estado 53
    T_MENOS  deslocar, e ir ao estado 54
    T_MAIOR  deslocar, e ir ao estado 55
    T_MENOR  deslocar, e ir ao estado 56
    T_IGUAL  deslocar, e ir ao estado 57
    T_E      deslocar, e ir ao estado 58
    T_OU     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 28 (escrita)


State 40

   46 expressao: termo .

    $padrão  reduzir usando a regra 46 (expressao)


State 41

   31 repeticao: T_ENQTO $@7 . expressao T_FACA $@8 lista_comandos T_FIMENQTO

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 60
    termo      ir ao estado 40


State 42

   34 selecao: T_SE expressao . $@9 T_ENTAO lista_comandos T_SENAO $@10 lista_comandos T_FIMSE
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIS   deslocar, e ir ao estado 53
    T_MENOS  deslocar, e ir ao estado 54
    T_MAIOR  deslocar, e ir ao estado 55
    T_MENOR  deslocar, e ir ao estado 56
    T_IGUAL  deslocar, e ir ao estado 57
    T_E      deslocar, e ir ao estado 58
    T_OU     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 32 ($@9)

    $@9  ir ao estado 61


State 43

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM .

    $padrão  reduzir usando a regra 2 (programa)


State 44

   20 lista_comandos: comando lista_comandos .

    $padrão  reduzir usando a regra 20 (lista_comandos)


State 45

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis .
   13 lista_variaveis: lista_variaveis . T_IDENTIF $@4 encontra_vetor

    T_IDENTIF  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 7 (declaracao_variaveis)


State 46

   15 lista_variaveis: T_IDENTIF $@5 . encontra_vetor

    T_ABRECOLCHETES  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 16 (encontra_vetor)

    encontra_vetor  ir ao estado 63


State 47

   13 lista_variaveis: lista_variaveis T_IDENTIF . $@4 encontra_vetor

    $padrão  reduzir usando a regra 12 ($@4)

    $@4  ir ao estado 64


State 48

   36 atribuicao: T_IDENTIF $@11 T_ATRIB . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 65
    termo      ir ao estado 40


State 49

   51 termo: T_NAO termo .

    $padrão  reduzir usando a regra 51 (termo)


State 50

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao
   52 termo: T_ABRE expressao . T_FECHA

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIS   deslocar, e ir ao estado 53
    T_MENOS  deslocar, e ir ao estado 54
    T_MAIOR  deslocar, e ir ao estado 55
    T_MENOR  deslocar, e ir ao estado 56
    T_IGUAL  deslocar, e ir ao estado 57
    T_E      deslocar, e ir ao estado 58
    T_OU     deslocar, e ir ao estado 59
    T_FECHA  deslocar, e ir ao estado 66


State 51

   37 expressao: expressao T_VEZES . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 67
    termo      ir ao estado 40


State 52

   38 expressao: expressao T_DIV . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 68
    termo      ir ao estado 40


State 53

   39 expressao: expressao T_MAIS . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 69
    termo      ir ao estado 40


State 54

   40 expressao: expressao T_MENOS . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 70
    termo      ir ao estado 40


State 55

   41 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 71
    termo      ir ao estado 40


State 56

   42 expressao: expressao T_MENOR . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 72
    termo      ir ao estado 40


State 57

   43 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 73
    termo      ir ao estado 40


State 58

   44 expressao: expressao T_E . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 74
    termo      ir ao estado 40


State 59

   45 expressao: expressao T_OU . expressao

    T_IDENTIF  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_NUMERO   deslocar, e ir ao estado 36
    T_NAO      deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 75
    termo      ir ao estado 40


State 60

   31 repeticao: T_ENQTO $@7 expressao . T_FACA $@8 lista_comandos T_FIMENQTO
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_FACA   deslocar, e ir ao estado 76
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIS   deslocar, e ir ao estado 53
    T_MENOS  deslocar, e ir ao estado 54
    T_MAIOR  deslocar, e ir ao estado 55
    T_MENOR  deslocar, e ir ao estado 56
    T_IGUAL  deslocar, e ir ao estado 57
    T_E      deslocar, e ir ao estado 58
    T_OU     deslocar, e ir ao estado 59


State 61

   34 selecao: T_SE expressao $@9 . T_ENTAO lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_ENTAO  deslocar, e ir ao estado 77


State 62

   18 encontra_vetor: T_ABRECOLCHETES . T_NUMERO $@6 T_FECHACOLCHETES

    T_NUMERO  deslocar, e ir ao estado 78


State 63

   15 lista_variaveis: T_IDENTIF $@5 encontra_vetor .

    $padrão  reduzir usando a regra 15 (lista_variaveis)


State 64

   13 lista_variaveis: lista_variaveis T_IDENTIF $@4 . encontra_vetor

    T_ABRECOLCHETES  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 16 (encontra_vetor)

    encontra_vetor  ir ao estado 79


State 65

   36 atribuicao: T_IDENTIF $@11 T_ATRIB expressao .
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIS   deslocar, e ir ao estado 53
    T_MENOS  deslocar, e ir ao estado 54
    T_MAIOR  deslocar, e ir ao estado 55
    T_MENOR  deslocar, e ir ao estado 56
    T_IGUAL  deslocar, e ir ao estado 57
    T_E      deslocar, e ir ao estado 58
    T_OU     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 36 (atribuicao)


State 66

   52 termo: T_ABRE expressao T_FECHA .

    $padrão  reduzir usando a regra 52 (termo)


State 67

   37 expressao: expressao . T_VEZES expressao
   37          | expressao T_VEZES expressao .
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    $padrão  reduzir usando a regra 37 (expressao)


State 68

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   38          | expressao T_DIV expressao .
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    $padrão  reduzir usando a regra 38 (expressao)


State 69

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   39          | expressao T_MAIS expressao .
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 39 (expressao)


State 70

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   40          | expressao T_MENOS expressao .
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 40 (expressao)


State 71
